# slayterHIL

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.md  README.md  WEBSITE.md  hover_test.json  old_CMake.txt  package-lock.json
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.MD
.github/workflows/: README.md  ci.yml  cmake-build.yml  placeholder_ubuntu.yml  placeholder_windows.yml  style-check.yml  zephyr-build.yml
SPI_Slave_Driver/: SpiTransport.cpp  SpiTransport.hpp  app.overlay
app/dashboard/: index.html  script.js  server.py  styles.css
docs/: amber_khauv.md  eric_hou.md  getting_started.md  samridh_prabhakar.md
docs/firmware/: vscode_steup.md
docs/team/: Ekansh Agrawal.md  Gautam  aarav_jain.md  aditya_sarkar.md  alex_aylward.md  aziz_sahibnazarov.md  becker_garretson.md  brian_diaz.md  craig_eagleburger.md  dharmik_madupathi.md  eric_hou.md  evin_lodder.md  frank_schlehofer.md  gabriel_torres.md  hanah_bradford.md  henry_chen.md  kaan_cetin.md  kerry_zhang.md  linda_xu.md  matt_stein.md  murtaza_haque.md  nikhil_chaudhary.md  oscar_surendranath.md  pranav_vadde.md  rishiraj_behki.md  ryan_wurtz.md  sebastian_ting.md  shoban_ananth.md  sidd_chhettry.md  vedant_agarwal.md
docs/test_node/: architecture.md  orchestrator_interface_design.md
firmware/: .gitignore  justfile
firmware/.west/: west.yml
flight-sim/graphics/: CMakeLists.txt
flight_controller/: .gitignore  CMakeLists.txt  Kconfig  _last_link_cmd.txt  _ld_error.txt  _link_cmd.txt  _link_verbose.txt  justfile  prj.conf
flight_controller/.west/: config  west.yml
flight_controller/app/: CMakeLists.txt  Kconfig  prj.conf
flight_controller/app/boards/: esp32s3_devkitc.overlay
flight_controller/app/src/: bno.c  bno.h  imu.c  imu.h  kalman.c  kalman.h  ledCtrl.c  ledCtrl.h  lidar.c  lidar.h  main.c  matrix.c  matrix.h  state_machine.c  state_machine.h  uart.c  uart.h
flight_controller/drivers/: CMakeLists.txt  Kconfig
flight_controller/drivers/sensor/: CMakeLists.txt  Kconfig
flight_controller/drivers/sensor/bno055/: CMakeLists.txt  bno055.c  bno055.h  bosch-bno055.yaml
flight_controller/drivers/sensor/example_sensor/: example_sensor.c
flight_controller/drivers/sensor/lidar_lite_v4/: CMakeLists.txt  Kconfig  lidar-lite-v4.yaml  lidar_lite_v4.c
flight_controller/dts/bindings/sensor/: bosch,bno055.yaml
flight_controller/include/: state_machine.h
flight_controller/scripts/: setup.sh
flight_graphics/: CMakeLists.txt
flight_sim/: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt~  CONTRIBUTING.md  MIGRATION.md  README.md  cmake.bak  compile_commands.json  physics_body.cpp  physics_body.h
flight_sim/graphics/: .gitignore
flight_sim/graphics/graphics/: visualizer.py
flight_sim/graphics/src/: main.cpp  mesh.cpp
flight_sim/include/: collection.hpp  drone.hpp  flight_sim.hpp  imu_generation.hpp  joint.hpp  physics_body.hpp  positionController.hpp  rc_parser.hpp  rigid_body.hpp  serialize.hpp  simulation.hpp  spi_new_test.hpp  velocityController.hpp
flight_sim/include/slayter/hal/: spi_new_interface.h
flight_sim/legacy/: UDPClient.cpp  UDPServer.cpp  json_utils.cpp  old_main.cpp
flight_sim/lib/: enet.h
flight_sim/src/: :  CMakeCache.txt  Makefile  PIDcalculator.cpp  RC_Parser.cpp  UDPClient.cpp  UDPServer.cpp  a.out  cmake_install.cmake  compile_commands.json  drone.cpp  imu_generation.cpp  main  main.cpp  old_main.cpp  physics_body.cpp  physics_body.h  physics_body.hpp  pid_tuning.csv  positionController.cpp  rigid_body.cpp  serialize.cpp  spi_interface.h  spi_linux.cpp  spi_master_test  spi_new_test.cpp  spi_stub.cpp  spi_test  spi_test.cpp  udp.cpp  velocityController.cpp  wire.hpp
flight_sim/src/data_faking/: imu_generation.cpp  imu_generation.hpp
flight_sim/src/graphics/: visualizer.py
flight_sim/src/physics/: PIDcalculator.cpp  PIDcalculator.hpp  drone.cpp  drone.hpp  physics_body.hpp  physics_body.hpp.gch  positionController.cpp  positionController.hpp  rigid_body.cpp  rigid_body.hpp  velocityController.cpp  velocityController.hpp
flight_sim/src/physics2/: drone.hpp  physics_body.hpp
flight_sim/src/spi/: spi_interface.h  spi_rpi.cpp
flight_sim/tests/: spi_modern_test.cpp  spi_output_test.cpp
flight_sim/utils/: json.hpp
hardware/slayterHIL_v1/: dut.kicad_sch  orchestrator.kicad_sch  power.kicad_sch  slayterHIL_v1.kicad_prl  slayterHIL_v1.kicad_pro  slayterHIL_v1.kicad_sch  test_node.kicad_sch
orchestrator/: README.md
test_node/: .gitignore  README.md  justfile
test_node/app/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.cmake
test_node/app/boards/: asdf  esp32s3_devkitc.overlay  esp32s3_devkitc_spi_bitbang.overlay  myspi.overlay  nucleo_h563zi.overlay
test_node/app/include/i2c/: get_device.c
test_node/app/remote/: CMakeLists.txt
test_node/app/src/: blink.c  hil_diag.c  hil_diag.h  main.c  main.old.c  main2.c  spi.c
test_node/app/src/threads/: Analysis.md  device_id.h  dut_interface.c  dut_interface.h  example_consumer.c  example_consumer.h  example_producer.c  example_producer.h  imu_emulator.c  imu_emulator2.h  imu_emulator_test.c  imu_emulator_test.h  lidar_emulator.h  lidar_emulator_test.c  lidar_emulator_test.h  orchestrator_comms.c  orchestrator_comms.h  pwm.c  pwm.h  rc.c  rc.h  scheduler.c  scheduler.h  scheduler_test.c  scheduler_test.h  sensor_emulation.c  sensor_emulation.h  sensor_emulation2.h  sensor_emulation_test.c  sensor_emulation_test.h  spi_fs.c  spi_fs.h
test_node/app/src/threads/c/: imu_emulator.h  imu_emulator2.c  lidar_emulator.c  lidar_emulator2.c  lidar_emulator2.h  pwm.h  scheduler_fs.c  scheduler_fs.h  scheduler_fs2.c  scheduler_fs2.h  sensor_emulation.h  sensor_emulation2.c
test_node/spi_bitbang_app/: CMakeLists.txt  prj.conf
test_node/spi_bitbang_app/boards/: nucleo_h563zi.overlay
test_node/spi_bitbang_app/src/: main.c
test_node/spi_module_app/: CMakeLists.txt  prj.conf
test_node/spi_module_app/boards/: spi_esp32s3_devkitc.overlay
test_node/spi_module_app/src/: main.c
tests/: drone_hover_test_results.json  hover_test.py  pos_to_json.py  rc_conversion.py
(+115 files in other folders)
